[package]
name = "condex"
version = "1.0.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/just-do-halee/condex"
repository = "https://github.com/just-do-halee/condex"
documentation = "https://docs.rs/condex"

description = "Extract tokens by simple condition expression."

readme = "README.md"

keywords = ["tokenizer", "sentence", "splitter", "parallel", "lexer"]
categories = ["parsing", "text-processing"]

license = "MIT OR Apache-2.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
